--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,10 +2,6 @@
   "compilerOptions": {
     "baseUrl": "./src"
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
