--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,18 +18,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 13.x
+          node-version: 14.x
 
       - name: Install NPM packages
-        run: npm ci
+        run: yarn install
 
       - name: Build project
-        run: npm run build
-
-      - name: Run tests
-        run: npm run test
+        run: yarn build
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v2
