--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "{JSON} Photos",
+  "name": "{JSON} Placeholder Photo Viewer",
   "icons": [
     {
       "src": "favicon.ico",
