--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-infinite-scroller": "^1.2.4",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loading-skeleton": "^2.2.0",
     "react-query": "^3.23.2",
     "react-scripts": "4.0.3",
