--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-loading-skeleton": "^2.2.0",
-    "react-query": "^3.23.2",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "styled-components": "^5.3.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
